<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SecondHand</string>
    <string name="title_home">Home</string>
    <string name="notif_buyer">Buyer</string>
    <string name="notif_seller">Seller</string>
    <string name="notif_all">All</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_jual">Jual</string>
    <string name="daftar_jual">Daftar Jual</string>
    <string name="title_akun">Akun</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="daftar_di_sini">Daftar Di sini</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="edit">edit</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="keluar">Keluar</string>
    <string name="order_history">Riwayat Transaksi</string>
    <string name="wishlist">Produk Favorit</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="fullname">Fullname</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_akun">Update Akun</string>
    <string name="update_password">Update Password</string>
    <string name="city">City</string>
    <string name="daftar">Daftar</string>
    <string name="password">Password</string>
    <string name="add_foto">add foto</string>
    <string name="add_photo_profile">Add Photo Profile</string>

    <string name="search_text">Cari di Second Chance</string>
    <string name="bulan_ramadhan">Bulan Ramadhan\nBanyak diskon!</string>
    <string name="diskon_hingga">Diskon Hingga</string>
    <string name="enam_puluh">60%</string>
    <string name="telusuri">Telusuri Kategori</string>
    <string name="detail_nego">Harga tawaranmu akan diketahui penjual,\njika penjual cocok kamu akan segera\ndihubungi penjual</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product">Product</string>
    <string name="diminati">Diminati</string>
    <string name="terjual">Terjual</string>
    <string name="basePrice">Rp. %s</string>
    <string name="fixPrice">Ditawar Rp. %s</string>
    <string name="message_success_order">Yeay kamu berhasil mendapat harga \n yang sesuai</string>
    <string name="message_success_order_second">Segera hubungi pembeli melalui \n whatsapp untuk transaksi selanjutnya</string>
    <string name="base_price_strike"><strike>Rp.20.000</strike></string>
    <string name="rp_0_00">Nominal</string>
    <string name="lengkapi_akun">Lengkapi Akun</string>
    <!-- Detail -->
</resources>