<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_jual"
        android:icon="@drawable/ic_add"
        android:title="@string/title_jual" />

    <item
        android:id="@+id/navigation_daftar_jual"
        android:icon="@drawable/ic_list"
        android:title="@string/daftar_jual" />

    <item
        android:id="@+id/navigation_akun"
        android:icon="@drawable/ic_account"
        android:title="@string/title_akun" />

</menu>