<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.binar.secondhand.login.LoginFragment">

    <ImageView
        android:id="@+id/icBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleMasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/masuk"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/icBack"
        app:layout_constraintTop_toBottomOf="@id/icBack" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/titleMasuk"
        app:layout_constraintTop_toBottomOf="@id/titleMasuk">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/masukan_password"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/titleMasuk"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextFieldEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/masuk"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldPassword"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldPassword"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPassword" />

    <TextView
        android:id="@+id/titleBelumPunyaAkun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="50dp"
        android:text="@string/belum_punya_akun"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toStartOf="@+id/txtDaftar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMasuk" />

    <TextView
        android:id="@+id/txtDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/daftar_di_sini"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="@+id/titleBelumPunyaAkun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="61dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/titleBelumPunyaAkun"
        app:layout_constraintTop_toTopOf="@+id/titleBelumPunyaAkun"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/profile_login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/txtDaftar"
        app:layout_constraintStart_toStartOf="@+id/titleBelumPunyaAkun"
        app:layout_constraintTop_toBottomOf="@+id/titleBelumPunyaAkun" />

</androidx.constraintlayout.widget.ConstraintLayout>